# skills-mcp

./: .gitignore  Cargo.toml  README.md  build.rs  install.sh
.agents/skills/document-feature/: SKILL.md  (+1 more)
.github/workflows/: ci.yml  release.yml
docs/: assumptions-and-limitations.md  backlog.md  roadmap.md  skill-feedback-loop.dot  skill-feedback-loop.svg.sha256
docs/journal/: 2026-07-13-engineering-journal-skill.md  2026-07-13-skill-templates-and-project-documentation.md  README.md
scripts/: mcp-smoke.sh  render-diagrams.sh
skills/catchup/: SKILL.md
skills/close-arc/: SKILL.md
skills/define-scope/: SKILL.md
skills/discuss/: SKILL.md
skills/engineering-journal/: SKILL.md
skills/frame-problem/: SKILL.md
skills/open-arc/: SKILL.md
skills/open-inquiry/: SKILL.md
skills/plan-feature/: SKILL.md
skills/propose-design/: SKILL.md
skills/recommend-skills/: SKILL.md
skills/reconcile-vault/: SKILL.md
skills/record-decision/: SKILL.md
skills/requirements-architect/: SKILL.md
skills/seed-skill-template/: SKILL.md
skills/submit-exploration/: SKILL.md
skills/synthesize/: SKILL.md
skills/vault-search/: SKILL.md
src/: main.rs  templates.rs
src/vault/: index.rs  mod.rs  parse.rs  query.rs  reflection.rs  schema.rs  transitions.rs
templates/: catalog.yaml
templates/document-feature-skill/: SKILL.md  template.yaml
templates/engineering-journal-skill/: SKILL.md  template.yaml
tests/: installed_instance.rs  recommend_skills_contracts.rs  repository_documentation.rs  seed_skill_template_contracts.rs  template_contracts.rs
(+23 files in other folders)
