[package]
name = "skills-mcp"
version = "0.1.0"
edition = "2021"
description = "Single-binary MCP server for embedded agent skills and workflows over stdio."
license = "MIT OR Apache-2.0"

[[bin]]
name = "skills-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.16", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "signal"] }
include_dir = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
semver = "1"
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rusqlite = { version = "0.31", features = ["bundled"] }
walkdir = "2"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
